make sure the error message is visible in full screen mode (moves the full screen button a bit out of place, but it's better than before)

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -21,6 +21,7 @@ body {
     border-color: red;
     border-style: solid;
     border-width: 4px;
+    margin-bottom: 5px;
   }
   
   #screenshots {
